# voice_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: livekit-sip.yaml
docs/: PRD-002-LiveKit-Telephony-Integration.md  architecture.md  deployment.md
docs/prd-drafts/: PRD-001-Hermes-Voice-Runtime-Foundation-approved.md  PRD-001-Hermes-Voice-Runtime-Foundation-draft.md
docs/tasks/: t_5fd591f4-prd.md  t_6a78755c-prd.md
scripts/: deploy.sh  smoke_test.sh
src/voice_agent/: __init__.py  __main__.py
src/voice_agent/api/: app.py
src/voice_agent/config/: settings.py
src/voice_agent/core/: audio_session_manager.py  logging.py  session_manager.py  version.py
src/voice_agent/hermes/: api_client.py  client.py  factory.py  fake.py
src/voice_agent/models/: schemas.py
src/voice_agent/telephony/: __init__.py  gateway.py  livekit.py  provider.py
tests/: test_api.py  test_config.py  test_session_manager.py  test_telephony.py  test_voice_gateway.py
